[tool.poetry]
name = "gas"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "<1.21.4"
Pillow = "^8.4.0"
matplotlib = "^3.5.1"
tensorflow = "<2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
